--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
     </head>
     <body>
+        <div id="root"></div>
     </body>
     <script src="./dist/bundle.js"></script>
 </html>
